--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.3.1",
     "express": "^4.12.4",
     "express-jwt": "^3.3.0",
+    "helmet": "^0.15.0",
     "jsonwebtoken": "^5.4.1",
     "mongoose": "^4.3.0",
     "passport": "^0.3.2",
